--- a/users/templates/users/layout.html
+++ b/users/templates/users/layout.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>Product Submission</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         .products {
             display: flex;
@@ -14,19 +16,43 @@
             width: calc(33.333% - 32px);
             box-sizing: border-box;
         }
+        nav a {
+            margin-right: 15px;
+        }
     </style>
 </head>
 <body>
     <header>
-        <nav>
-            <a href="{% url 'index' %}">Home</a>
-            <a href="{% url 'submit_product' %}">Submit Product</a>
-            <a href="{% url 'profile' %}">profile</a>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">MySite</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item {% if request.path == '/' %}active{% endif %}">
+                        <a class="nav-link" href="{% url 'index' %}">Home</a>
+                    </li>
+                    <li class="nav-item {% if request.path == '/submit_product/' %}active{% endif %}">
+                        <a class="nav-link" href="{% url 'submit_product' %}">Submit Product</a>
+                    </li>
+                    <li class="nav-item {% if request.path == '/profile/' %}active{% endif %}">
+                        <a class="nav-link" href="{% url 'profile' %}">Profile</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'logout' %}">Logout</a> <!-- Logout link -->
+                    </li>
+                </ul>
+            </div>
         </nav>
     </header>
-    <main>
+    <main class="container mt-5">
         {% block content %}
         {% endblock %}
     </main>
+    <!-- Bootstrap JS and dependencies -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
