--- a/users/templates/users/sign.html
+++ b/users/templates/users/sign.html
@@ -1,18 +1,22 @@
 {% extends "users/layout.html" %}
 {% block content %}
-
-<h2>Sign Up</h2>
-{% if messages %}
-    <ul>
-        {% for message in messages %}
-            <li style="color: red;">{{ message }}</li>
-        {% endfor %}
-    </ul>
-{% endif %}
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Sign Up</button>
-</form>
-
+<div class="row justify-content-center">
+    <div class="col-md-6">
+        <h2 class="mb-4">Sign Up</h2>
+        {% if messages %}
+            <div class="alert alert-danger">
+                <ul class="mb-0">
+                    {% for message in messages %}
+                        <li>{{ message }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+        {% endif %}
+        <form method="post" class="border p-4 bg-light">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit" class="btn btn-primary btn-block">Sign Up</button>
+        </form>
+    </div>
+</div>
 {% endblock %}
