--- a/users/templates/users/user.html
+++ b/users/templates/users/user.html
@@ -1,19 +1,21 @@
 {% extends "users/layout.html" %}
 {% block content %}
-<h1>welcome {{ request.user.username }}</h1>
-<h2>Available Products</h2>
+<h2>All Offers</h2>
 <div class="products">
-    {% for product in products %}
-    <div class="product">
-        <h3>{{ product.name }}</h3>
-        <p>Price: ${{ product.price }}</p>
-        <p>Phone: {{ product.phone_number }}</p>
-        <p>State: {{ product.get_state_display }}</p>
-        <p>City: {{ product.city }}</p>
-        <p>Posted by: {{ product.user.username }}</p>
-        <p>Posted on: {{ product.created_at }}</p>
-    </div>
-    {% endfor %}
+    {% if products %}
+        {% for product in products %}
+        <div class="product">
+            <h3><a href="{% url 'product_detail' product.id %}">{{ product.name }}</a></h3>
+            <p>Price: ${{ product.price }}</p>
+            <p>Phone: {{ product.phone_number }}</p>
+            <p>State: {{ product.get_state_display }}</p>
+            <p>City: {{ product.city }}</p>
+            <p>Posted by: {{ product.user.username }}</p>
+            <p>Posted on: {{ product.created_at }}</p>
+        </div>
+        {% endfor %}
+    {% else %}
+        <p>No products found. <a href="{% url 'submit_product' %}">Submit a product</a></p>
+    {% endif %}
 </div>
-<a href="{% url 'logout' %}">logout</a>
 {% endblock %}
