--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -1,6 +1,6 @@
 {% extends "users/layout.html" %}
 {% block content %}
 
-<a href="users/login">login</a>
+<a href="users/login">loginnn</a>
 
 {% endblock %}
