--- a/users/templates/users/layout.html
+++ b/users/templates/users/layout.html
@@ -43,6 +43,11 @@
                         <a class="nav-link" href="{% url 'logout' %}">Logout</a> <!-- Logout link -->
                     </li>
                 </ul>
+                <!-- Search form -->
+                <form class="form-inline my-2 my-lg-0" method="get" action="{% url 'index' %}">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="q">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </form>
             </div>
         </nav>
     </header>
