--- a/users/templates/users/layout.html
+++ b/users/templates/users/layout.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html>
+{%load static%}
 <html>
 <head>
     <title>Product Submission</title>
     <!-- Bootstrap CSS -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
+   
     <style>
         .products {
             display: flex;
@@ -21,7 +22,8 @@
         }
     </style>
 </head>
-<body>
+<body> 
+    <link href="{% static 'css/filter.css'%}" rel="stylesheet">
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#">MySite</a>
@@ -46,7 +48,40 @@
                 <!-- Search form -->
                 <form class="form-inline my-2 my-lg-0" method="get" action="{% url 'index' %}">
                     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="q">
+                    <div class="filter" style="display:none;position:absolute;">
+                        <h2>Filter your Result</h2>
+                        <hr class="dropdown-divider">
+                        <div class="wilaya_price">
+                        <h6>wilaya</h6>
+                        <select name="location" class="custom-select" aria-label="Default select example">
+                          <option></option>
+                        {% for wilaya in wilayas %}
+                          <option value="{{wilaya.name}}">{{wilaya.name}}</option>
+                        {%endfor%}
+                        </select>
+                        <div class="input-group mb-3 input">
+                        <h6>Min_price</h6>
+                        <input type="number" class="form-control username" name="min_price">
+                        <h6>Max_price</h6>
+                        <input type="number" class="form-control username" name="max_price">
+                        </div>
+                        <div class="input-group mb-3 input">
+                          <h6>Min_space</h6>
+                          <input type="number" class="form-control username" name="min_space">
+                          <h6>Max_space</h6>
+                          <input type="number" class="form-control username" name="max_space">
+                          </div>
+                          <div class="input-group mb-3 input">             
+                            <h6>floor number</h6>
+                            <input type="number" class="form-control username" name="floor">
+                            </div>
+                        <button class="apply" type="button">apply</button>
+                        </div>
+              
+              
+                  </div>
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                    <button class="btn btn-outline-success my-2 my-sm-0 filter_btn" type="button" style="margin-right:.35vw;">filter</button>
                 </form>
             </div>
         </nav>
@@ -59,5 +94,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="{%static 'js/filter.js'%}"></script>
 </body>
 </html>
