--- a/users/templates/users/layout.html
+++ b/users/templates/users/layout.html
@@ -23,6 +23,7 @@
     </style>
 </head>
 <body> 
+    <link href="{% static 'css/home.css'%}" rel="stylesheet">
     <link href="{% static 'css/filter.css'%}" rel="stylesheet">
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
