--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -88,12 +88,11 @@
     {% if products %}
         {% for product in products %}
         <div class="product">
+             <div class="card-img"><img src="{{product.media_files_set.first.path.url}}" alt=""></div>
+             <hr class="dropdown-divider">
             <h3>{{ product.name }}</h3>
-            <p>Price: ${{ product.price }}</p>
-            <p>Phone: {{ product.phone_number }}</p>
-            <p>State: {{ product.get_state_display }}</p>
+            <p>Price: ${{ product.price }}</p>  
             <p>City: {{ product.city }}</p>
-            <p>Posted on: {{ product.created_at }}</p>
             <a href="{% url 'edit_product' product.id %}">Edit</a> | <!-- Add Edit link -->
             <a href="{% url 'delete_product' product.id %}">Delete</a>
         </div>
