--- a/users/templates/users/user.html
+++ b/users/templates/users/user.html
@@ -5,16 +5,12 @@
     {% if products %}
         {% for product in products %}
         <div class="product">
+            <div class="card-img"><img src="{{product.media_files_set.first.path.url}}" alt=""></div>
+            <hr class="dropdown-divider">
             <h3><a href="{% url 'product_detail' product.id %}">{{ product.name }}</a></h3>
             <p>Price: ${{ product.price }}</p>
-            <p>Phone: {{ product.phone_number }}</p>
-            <p>State: {{ product.get_state_display }}</p>
             <p>City: {{ product.city }}</p>
-            <p>Condition: {{ product.condition }}</p>
-            <p>Quantity: {{ product.quantity }}</p>
             <p>Sales: {{ product.sales }}</p>
-            <p>Posted by: {{ product.user.username }}</p>
-            <p>Posted on: {{ product.created_at }}</p>
             <form method="POST" action="{% url 'buy_product' product.id %}">
                 {% csrf_token %}
                 <button type="submit" class="btn btn-primary" {% if product.quantity == 0 %}disabled{% endif %}>Buy</button>
